[tool.poetry]
name = "grevling-ifem"
version = "0.1.0"
description = "Grevling plugin for IFEM data extraction"
authors = ["Eivind Fonn <eivind.fonn@sintef.no>"]
license = "AGPL"
readme = "README.md"
packages = [{include = "grevling_ifem"}]

[tool.poetry.dependencies]
python = "^3.10"
grevling = "^3.0.0-a2"
netCDF4 = "^1.6.5"
h5py = "^3.10.0"
pydantic = "^2"
splipy = "^1.7.4"
lxml = "^4.9.3"
scipy = "^1.11.4"
numpy = "^1.26.2"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
